[project]
name = "engram-peft"
version = "1.2.6"
description = "Engram-PEFT: Efficient Parameter-Efficient Fine-Tuning with Engram"
readme = "README.md"
authors = [
    { name = "QingGo", email = "zyqingjohn@qq.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.19.0",
    "accelerate>=1.13.0",
    "httpx[socks]>=0.28.1",
    "typer>=0.12.0",
    "PyYAML>=6.0.0",
    "peft>=0.18.1",
    "huggingface-hub>=0.25.0",
    "trl>=1.2.0",
    "bitsandbytes>=0.49.2",
    "jaxtyping",
    "typeguard",
    "python-dotenv>=1.0.0",
]

[project.scripts]
engram-peft = "engram_peft.cli:app"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
engram_peft = ["*.yaml", "*.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["\\.venv", "build", "dist", "tests"]
# 1. 开启 SQLite 缓存（加速本地冷启动）
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
    "tqdm.*",
    "sympy.*",
    "tokenizers.*",
    "datasets.*",
    "matplotlib.*",
    "seaborn.*",
    "scipy.*",
    "pandas.*",
    "pydantic.*",
    "trl.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E: pycodestyle
# F: Pyflakes
# I: isort
# B: flake8-bugbear
# TCH: flake8-type-checking
# PLC: pylint-convention
# UP: pyupgrade
select = ["E", "F", "I", "B", "TCH", "PLC", "UP"]
# E501: Line too long
# F722: Syntax error in forward annotation (caused by jaxtyping)
ignore = ["E501", "F722"]

[tool.ruff.lint.per-file-ignores]
# F811: Redefinition of unused name
# F401: Module imported but unused
# B011: Do not call assert False
# PLC0415: import should be at the top-level (allowed for lazy loading in tests)
"tests/*" = ["F811", "F401", "B011", "PLC0415"]
# E402: import not at top of file (intentional: load_dotenv() must run before
#       some imports to make HF tokens available via env vars)
"examples/*" = ["E402"]


[tool.basedpyright]
include = ["src", "examples"]
exclude = [
    "tests",
    "src/engram_peft/inference_template.py",
    "**/__pycache__",
    ".venv",
]

# Add examples to the Python search path so that relative imports work
extraPaths = ["."]


typeCheckingMode = "standard"

# ----------------------------------------------------------------------
# 核心严格规则
# ----------------------------------------------------------------------
reportIncompatibleMethodOverride = "error"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "error"

# ----------------------------------------------------------------------
# 第三方库适配
# ----------------------------------------------------------------------
reportUnknownMemberType = "warning"       # transformers/peft 存根不完整
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"         # PyTorch 存根将公开 API 误标记为私有

# ----------------------------------------------------------------------
# 代码质量提醒
# ----------------------------------------------------------------------
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedParameter = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitStringConcatenation = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitOverride = "warning"
reportUnannotatedClassAttribute = "warning"

# ----------------------------------------------------------------------
# 分级环境
# ----------------------------------------------------------------------
executionEnvironments = [
    { root = "src", reportUnknownVariableType = "error", reportUnknownMemberType = "error", reportUnknownArgumentType = "error", reportUnknownParameterType = "error" },
    { root = "tests", reportUnknownVariableType = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none", reportUnknownParameterType = "none", reportUnknownLambdaType = "none" },
    { root = "examples", reportUnknownVariableType = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none", reportUnknownParameterType = "none", reportUnknownLambdaType = "none" },
]


[dependency-groups]
# Install: uv sync --group dev --group deepspeed --group npu
deepspeed = [
    "deepspeed>=0.15.0",
]
npu = [
    # torch-npu removed temporarily to unblock torch>=2.6 upgrade
]
dev = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest-cov>=5.0.0",
    "pytest>=8.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "types-seaborn>=0.13.2.20260408",
    "pre-commit>=4.5.1",
    "wandb>=0.17.0",
    "ruff>=0.15.11",
    "omegaconf>=2.3.0",
    "types-pyyaml>=6.0.12.20260408",
    "ipython>=8.39.0",
    "ipytest>=0.14.2",
    "sprintest>=1.1.1",
    "bitsandbytes>=0.49.2",
    "basedpyright",
]

[tool.sprintest]
ignore = [
    "torch.*",
    "transformers.*",
    "peft.*",
    "accelerate.*",
    "datasets.*",
    "tokenizers.*"
]
